Responsive bug on iPhone 7 fixed.

--- a/styles.css
+++ b/styles.css
@@ -7,18 +7,17 @@
 }
 
 html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
 
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
-
-    background: var(--background)
+  background: var(--background)
 }
 
 header {
-  position: fixed;
+  position: relative;
   width: 99%;
   height: 100px;
 
